--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                 <div class="nav__control-item nav__control-online">
                     <img src="./assets/images/icons/activity.svg" class="nav__control-online__icon" alt="">
                     <div class="nav__control-online__info">
-                        <p class="nav__control-online__hover">Нажмите, чтобы скопировать айпи</p>
-                        <p class="nav__control-online__ip">mc.testmc.ru</p>
-                        <p class="nav__control-online__status">Онлайн: <span id="server0"
-                                                                             class="nav__control-online__checked">10</span>
+                        <p class="nav__control-online__hover">Натисніть, щоб скоюпіювати id серверу</p>
+                        <p class="nav__control-online__ip">quickworld.fun</p>
+                        <p class="nav__control-online__status">Онлайн: <span id="server0" class="nav__control-online__checked">999</span>
                         </p>
                     </div>
                 </div>
