копирование айпи сервера

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <div class="nav__control-item nav__control-theme" theme>
                     <img src="./assets/images/icons/moon.svg" class="nav__control-theme__icon" alt="">
                 </div>
-<!--                <div class="nav__control-item nav__control-burger">-->
-<!--                    <div class="nav__control-burger__line nav__control-burger__line1"></div>-->
-<!--                    <div class="nav__control-burger__line nav__control-burger__line2"></div>-->
-<!--                    <div class="nav__control-burger__line nav__control-burger__line3"></div>-->
-<!--                </div>-->
+                <div class="nav__control-item nav__control-burger">
+                    <div class="nav__control-burger__line nav__control-burger__line1"></div>
+                    <div class="nav__control-burger__line nav__control-burger__line2"></div>
+                    <div class="nav__control-burger__line nav__control-burger__line3"></div>
+                </div>
             </div>
         </div>
     </nav>
