копирование айпи сервера

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="_container">
             <div class="slider_item">
                 <h2>Бойовий пропуск!</h2>
-                <p>Стань першим з малої тересви хто зробив донат</p>
+                <p>Стань першим з малої Тересви ци з Кривого, ци може Мукачева, до бога хоть удкі, хто зробив донат</p>
                 <a href="#">Купити за 300 грн.</a>
             </div>
         </div>
@@ -546,6 +546,7 @@
 </div>
 
 
+<a href="#popup">HELLLLLLOOOOOOO!!!</a>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/18846f0aad.js" crossorigin="anonymous"></script>
