--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 <a class="nav__list-item" href=#">Підтримка</a>
             </div>
             <div class="nav__control">
-                <div class="nav__control-item nav__control-online">
+                <div class="nav__control-item nav__control-online test-2">
                     <img src="./assets/images/icons/activity.svg" class="nav__control-online__icon" alt="">
-                    <div class="nav__control-online__info">
+                    <div class="nav__control-online__info ">
                         <p class="nav__control-online__hover">Натисніть, щоб скоюпіювати id серверу</p>
-                        <p class="nav__control-online__ip">quickworld.fun</p>
+                        <p class="nav__control-online__ip ">quickworld.fun</p>
                         <p class="nav__control-online__status">Онлайн: <span id="server0"
                                                                              class="nav__control-online__checked">999</span>
                         </p>
@@ -364,7 +364,7 @@
     </div>
 </div>
 
-
+<h4>Hello World</h4>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/18846f0aad.js" crossorigin="anonymous"></script>
